remove MonkeyRunnerStarter in the android example